# stellaris

./: .dockerignore  .env.example  .gitignore  .gitmodules  .pyre_configuration  .travis.yml  CONTRIBUTING.md  Cargo.toml  Dockerfile  IBC_README.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MSG.md  PROJECT_OVERVIEW.md  README.md  TESTING.md  benchmark.sh  build.sh  build_container.sh  build_project.sh  check_sync_status.py  demo_ibc_api.py  docker-compose.yml  fix_sync_issue.py  miner.py  pyproject.toml  requirements.txt  run.sh  run_alt.sh  run_dev_nodes.sh  run_node.py  run_stellaris.sh  run_stellaris_node.py  summary.txt  test_app_deployment.py  test_benchmark.py  test_discovery.py  test_ibc.py  validate_improvements.py
.devcontainer/: devcontainer.json
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: other.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: pyre.yml  pyre.yml.disabled  pysa.yml  pysa.yml.disabled  test-run.yml
config/: README.md  apps.json  cryptography.json  dev.json  discovery.json  kytan.json  p2p.json  settings.json  storage.json
crates/: README.md
crates/pylibp2p/: Cargo.toml  README.md
crates/pylibp2p/src/: crypto.rs  discovery.rs  lib.rs  protocols.rs  storage.rs  transport.rs
data/: README.md
docs/: API_REFERENCE.md  APP_DEPLOYMENT.md  ARCHITECTURE.md  BPF_VM_GUIDE.md  CONFIGURATION.md  FAQ.md  GETTING_STARTED.md  INSTALLATION.md  README.md  SECURITY.md  SOLIDITY_INTEGRATION.md
examples/: README.md  bpf_vm_example.py  solidity_example.py
examples/hardhat-example/: README.md  hardhat.config.js  package.json  pnpm-lock.yaml
examples/hardhat-example/contracts/: AdvancedERC20.sol  SimpleStorage.sol
examples/hardhat-example/scripts/: deploy-advanced.js  deploy.js
examples/hardhat-example/test/: ERC20.test.js  SimpleStorage.test.js
examples/production-contracts/: DAOGovernance.sol  DeFiProtocol.sol  NFTMarketplace.sol
examples/test-app/: Dockerfile  README.md  app.py
examples/web3js-example/: .env.example  README.md  basic-example.js  deploy-erc20.js  index.js  interact-erc20.js  package.json
examples/web3js-example/contracts/: StellarisToken.sol
modules/: generate_patches.sh  update_submodules.sh
scripts/: benchmark.sh  build_container.sh  compile.sh  post_create.sh  rustpython_benchmark.sh  rustpython_run.sh  test.sh
src/: __init__.py  benchmark_examples.py  cli.py  data_tests.py  main.py  miner.py  routes.py  run_stellaris_node.py
src/api/apps/: add_app.py  add_stop_app.py  deploy_app.py  get_app_status.py  list_apps.py  scale_app.py
src/api/data/: add_nri.py  add_rri.py  discover_nodes.py  discover_relays.py  fetch_nri.py  fetch_rri.py  get_local_nri.py  get_local_rri.py  schemas.py
src/api/info/: configure_public_discovery.py  network_overview.py  program_stats.py  settings.py
src/api/status/: health.py
src/api/test/: request_factory.py  send_artifact_request.py
src/lib/: __init__.py
src/lib/VoxaCommunications_Router/: README.md  __init__.py
src/lib/VoxaCommunications_Router/apps/: app_manager.py  cli.py  integration.py  load_balancer.py  security.py
src/lib/VoxaCommunications_Router/cryptography/: encryptionutils.py  keymanager.py  keyutils.py  relayintegrity.py
src/lib/VoxaCommunications_Router/dht/: README.md  dht_node.py  dht_record.py  kbucket.py
src/lib/VoxaCommunications_Router/discovery/: __init__.py  discovery_manager.py  network_scanner.py  node_discovery.py  p2p_discovery.py  relay_discovery.py
src/lib/VoxaCommunications_Router/net/: net_interface.py  net_manager.py  netmanager.py  packet.py  propagation_handler.py
src/lib/VoxaCommunications_Router/net/dns/: dns_handler.py  dns_manager.py  dns_packet.py  dns_utils.py
src/lib/VoxaCommunications_Router/net/p2p/: p2p_manager.py
src/lib/VoxaCommunications_Router/net/packets/: __init__.py  internal_http_packet.py  internal_http_packet_response.py  propagation_data.py  propagation_packet.py
src/lib/VoxaCommunications_Router/net/ssu/: README.md  ssu_control_packet.py  ssu_manager.py  ssu_node.py  ssu_packet.py  ssu_request.py  ssu_utils.py
src/lib/VoxaCommunications_Router/registry/: __init__.py  client.py  registry_manager.py  registry_validators.py
src/lib/VoxaCommunications_Router/relay/net/: nodehandler.py
src/lib/VoxaCommunications_Router/ri/: generate_maps.py  ri_manager.py
src/lib/VoxaCommunications_Router/routing/: request.py  request_data.py  route.py  routeutils.py  routing_map.py
src/lib/VoxaCommunications_Router/stellaris/: blockchain.py  database.py  manager.py
src/lib/VoxaCommunications_Router/stores/: globalsettings.py
src/lib/VoxaCommunications_Router/util/: logging.py  net_utils.py  ri_utils.py
src/lib/compression/: __init__.py  json_compressor.py  utils.py
src/lib/dynamiclibrary/: __init__.py  loader.py  structs.py
src/module_tests/: populate_data.py
src/schema/: BaseRISchema.py  NRISchema.py  RRISchema.py
src/schema/apps/: app_deployment_response.py  deploy_app_request.py
src/schema/dns/: a_record.py  dns_record.py
src/schema/test/: request_factory_schema.py
src/stores/: globalconfig.py  kytancontroller.py  registrycontroller.py  testartifacts.py
src/util/: __init__.py  benchmark.py  dirutils.py  envutils.py  filereader.py  initnode.py  jsonreader.py  jsonutils.py  logging.py  setuputils.py  wrappers.py
stellaris/: constants.py  database.py  manager.py  schema.sql
stellaris/bpf_vm/: __init__.py  contract.py  evm_compat.py  exceptions.py  executor.py  solidity_abi.py  vm.py
stellaris/ibc/: __init__.py  channel.py  client.py  connection.py  messages.py  packet.py  state.py  transaction.py
stellaris/node/: main.py  nodes.json  nodes_manager.py
stellaris/scripts/: setup_db.sh
stellaris/transactions/: __init__.py  bpf_contract_transaction.py  coinbase_transaction.py  transaction.py  transaction_input.py  transaction_output.py
stellaris/utils/: block_utils.py  general.py
tests/: run_tests.py  test.py  test_bpf_vm.py  test_compression.py  test_solidity_integration.py  test_startup.sh
tests/test_cluster/: docker-compose.yml
(+14 files in other folders)
