[package]
name = "pylibp2p"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module", "auto-initialize"] }
libp2p = { version = "0.55", features = [
    "tcp", "quic", "websocket", "dns", "mdns", "noise", "yamux",
    "ping", "identify", "gossipsub", "kad", "relay",
    "dcutr", "autonat", "rendezvous", "request-response",
    "macros", "async-std", "tokio", "serde", "rsa", "secp256k1"
] }
libp2p-swarm = { version = "0.46", features = ["macros"] }
libp2p-kad = "0.47"
libp2p-gossipsub = "0.48"
libp2p-request-response = "0.28"
libp2p-identify = "0.46"
libp2p-ping = "0.46"
libp2p-mdns = { version = "0.47", features = ["async-io"] }
libp2p-noise = "0.46"
libp2p-yamux = "0.47"
libp2p-tcp = { version = "0.43", features = ["async-io"] }
libp2p-quic = { version = "0.12", features = ["async-std"] }
libp2p-websocket = "0.45"
libp2p-relay = "0.19"
libp2p-dcutr = "0.13"
libp2p-autonat = "0.14"
libp2p-rendezvous = "0.16"
multiaddr = "0.18"
tokio = { version = "1.38", features = ["full"] }
async-std = "1.12"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = "0.3"
sha2 = "0.10"
blake3 = "1.0"
multihash = { version = "0.19", features = ["std"] }
hex = "0.4"